# Macbrew

./: .gitattributes  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  RELEASE_NOTES.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md  question.md  security_issue.md
.github/workflows/: greetings.yml
docs/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
docs/src/components/: Footer.astro  Header.astro
docs/src/layouts/: Layout.astro
docs/src/pages/: index.astro
docs/src/pages/docs/: api.md  commands.md  features.md  plugins.md
docs/src/pages/docs/getting-started/: index.md  installation.md
docs/src/styles/: global.css
scripts/: install.js  postinstall.js  uninstall.js
src/: autocomplete.rs  commands.rs  config.rs  history.rs  index.ts  jobs.rs  main.rs  plugins.rs  utils.rs
src/lib/: config-manager.ts  macbrew.ts  plugin-manager.ts  terminal.ts
src/scripts/: install.ts  postinstall.ts  uninstall.ts
src/types/: config.ts  plugin.ts  terminal.ts
