[package]
name = "terminal-emulator"
version = "1.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
tui = "0.19"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
rustyline = "12.0"
syntect = "5.0"
regex = "1.0"
walkdir = "2.3"
notify = "6.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
base64 = "0.21"
hex = "0.4"
md5 = "0.7"
sha2 = "0.10"
rand = "0.8"
indicatif = "0.17"
console = "0.15"
colored = "2.0"
shellexpand = "3.1"
glob = "0.3"
tempfile = "3.8" 